2004-06-08  lav

	* keymap.cc: don't show shortcut if corresponding key in terminfo
	  is not defined.

2004-06-04  lav

	* user.cc: initialize newname in load and save-as.
	* keymapdf.cc: add kUND, krdo, kRDO key bindings.
	* kern.cc: (ReplaceBlock) mark buffer modified when not mmapped.

2004-05-20  lav

	* undo.cc: fixed malloc(0) and memory allocation error handling;
	  clear group_head in Clear.
	* user.cc: call undelete if undo is disabled.
	* keymapdf.cc: call undo on ^U and kund.

2004-05-19  lav

	* undo.h, undo.cc: (GroupHead) new class; save block positions there.
	* kern.cc: clear undo when emptying text buffer.
	* mainmenu.cc: leave bare minimum - the menu is loaded from file.
	* keymap.cc, keymap.h, keymapfn.cc, keymapdf.cc, user.cc, user.h:
	  make automatic decision to input a byte or a wchar in
	  choose-character and insert-char-by-code; add corresponding byte
	  actions.
	* edit.cc: remove "no undo" message.
	* screen.cc: use more compatible getyx instead of getcurx.

2004-05-18  lav

	* chset.cc: display character in mb_mode properly - convert it to mb;
	  display unprintable 0x80 as '.'.
	* edit.cc, screen.cc: fix compile without mb chars.
	* getstr.cc, options.cc: use custom mb_len instead of mblen.
	* mb.cc, mb.h: add mb_len function; rename static variables.
	* window.cc: fix compile without mb chars; check mb_mode.

2004-05-12  lav

	* format.cc: add "no undo" phrase only if undo is disabled.

2004-05-06  lav

	* edit.cc: use UserReplaceChar.
	* kern.cc: use low level ReplaceBlock if undo is enabled; allow replace
	  if new block extends file; re-do ReplaceCharMove.
	* keymap.cc: undo-options; initialize shift in PrettyCodeScore properly.
	* keymap.h: UNDO_OPTIONS.
	* keymapdf.cc: add redo.
	* keymapfn.cc: add undo-step and redo-step.
	* options.cc, options.h: add undo options; fix number label positioning.
	* undo.cc, undo.h: (UndoOne, RedoOne, Change::Join, Clear) new methods.