@@ -1,7 +1,8 @@
 2004-06-08  lav
 
 	* keymap.cc: don't show shortcut if corresponding key in terminfo
-	  is not defined.
+	  is not defined; tune control-shift-Fx scores.
+	* keymapdf.cc: add kspd binding to suspend-editor.
 
 2004-06-04  lav
 
